--- a/index.html
+++ b/index.html
@@ -479,12 +479,12 @@ Fala comigo no WhatsApp e eu te ajudo agora mesmo!</h2>				</div>
 				} );
 			</script>
 			<noscript><img height="1" width="1" style="display: none;" src="https://www.facebook.com/tr?id=1013376330782188&ev=PageView&noscript=1&cd%5Bpage_title%5D=CEC+-+P%C3%A1gina+de+Vendas+%2310&cd%5Bpost_type%5D=page&cd%5Bpost_id%5D=10&cd%5Bplugin%5D=PixelYourSite&cd%5Buser_role%5D=guest&cd%5Bevent_url%5D=TMGHIXzUyMUh.com%2F" alt=""></noscript>
-<script src="wp-includes/js/dist/vendor/react.min_ver%3D18.3.1.1.js" id="react-js"></script>
-<script src="wp-includes/js/dist/vendor/react-jsx-runtime.min_ver%3D18.3.1.js" id="react-jsx-runtime-js"></script>
-<script src="wp-includes/js/dist/vendor/react-dom.min_ver%3D18.3.1.1.js" id="react-dom-js"></script>
-<script src="wp-includes/js/dist/dom-ready.min_ver%3Df77871ff7694fffea381.js" id="wp-dom-ready-js"></script>
-<script src="wp-includes/js/dist/hooks.min_ver%3D4d63a3d491d11ffd8ac6.js" id="wp-hooks-js"></script>
-<script src="wp-includes/js/dist/i18n.min_ver%3D5e580eb46a90c2b997e6.js" id="wp-i18n-js"></script>
+<script src="TMGHIXzUyMUh.com/wp-includes/js/dist/vendor/react.min_ver%3D18.3.1.1.js" id="react-js"></script>
+<script src="TMGHIXzUyMUh.com/wp-includes/js/dist/vendor/react-jsx-runtime.min_ver%3D18.3.1.js" id="react-jsx-runtime-js"></script>
+<script src="TMGHIXzUyMUh.com/wp-includes/js/dist/vendor/react-dom.min_ver%3D18.3.1.1.js" id="react-dom-js"></script>
+<script src="TMGHIXzUyMUh.com/wp-includes/js/dist/dom-ready.min_ver%3Df77871ff7694fffea381.js" id="wp-dom-ready-js"></script>
+<script src="TMGHIXzUyMUh.com/wp-includes/js/dist/hooks.min_ver%3D4d63a3d491d11ffd8ac6.js" id="wp-hooks-js"></script>
+<script src="TMGHIXzUyMUh.com/wp-includes/js/dist/i18n.min_ver%3D5e580eb46a90c2b997e6.js" id="wp-i18n-js"></script>
 <script id="wp-i18n-js-after">
 wp.i18n.setLocaleData( { 'text direction\u0004ltr': [ 'ltr' ] } );
 </script>
@@ -495,9 +495,9 @@ wp.i18n.setLocaleData( { 'text direction\u0004ltr': [ 'ltr' ] } );
 	wp.i18n.setLocaleData( localeData, domain );
 } )( "default", {"translation-revision-date":"2025-04-09 14:35:11+0000","generator":"GlotPress\/4.0.1","domain":"messages","locale_data":{"messages":{"":{"domain":"messages","plural-forms":"nplurals=2; plural=n > 1;","lang":"pt_BR"},"Notifications":["Notifica\u00e7\u00f5es"]}},"comment":{"reference":"wp-includes\/js\/dist\/a11y.js"}} );
 </script>
-<script src="wp-includes/js/dist/a11y.min_ver%3D3156534cc54473497e14.js" id="wp-a11y-js"></script>
-<script src="wp-includes/js/dist/vendor/wp-polyfill.min_ver%3D3.15.0.js" id="wp-polyfill-js"></script>
-<script src="wp-includes/js/dist/url.min_ver%3Dc2964167dfe2477c14ea.js" id="wp-url-js"></script>
+<script src="TMGHIXzUyMUh.com/wp-includes/js/dist/a11y.min_ver%3D3156534cc54473497e14.js" id="wp-a11y-js"></script>
+<script src="TMGHIXzUyMUh.com/wp-includes/js/dist/vendor/wp-polyfill.min_ver%3D3.15.0.js" id="wp-polyfill-js"></script>
+<script src="TMGHIXzUyMUh.com/wp-includes/js/dist/url.min_ver%3Dc2964167dfe2477c14ea.js" id="wp-url-js"></script>
 <script id="wp-api-fetch-js-translations">
 ( function( domain, translations ) {
 	var localeData = translations.locale_data[ domain ] || translations.locale_data.messages;
@@ -505,7 +505,7 @@ wp.i18n.setLocaleData( { 'text direction\u0004ltr': [ 'ltr' ] } );
 	wp.i18n.setLocaleData( localeData, domain );
 } )( "default", {"translation-revision-date":"2025-04-09 14:35:11+0000","generator":"GlotPress\/4.0.1","domain":"messages","locale_data":{"messages":{"":{"domain":"messages","plural-forms":"nplurals=2; plural=n > 1;","lang":"pt_BR"},"You are probably offline.":["Voc\u00ea provavelmente est\u00e1 offline."],"Media upload failed. If this is a photo or a large image, please scale it down and try again.":["Falha ao enviar a m\u00eddia. Se for uma foto ou imagem grande, reduza o tamanho e tente novamente."],"The response is not a valid JSON response.":["A resposta n\u00e3o \u00e9 um JSON v\u00e1lido."],"An unknown error occurred.":["Um erro desconhecido ocorreu."]}},"comment":{"reference":"wp-includes\/js\/dist\/api-fetch.js"}} );
 </script>
-<script src="wp-includes/js/dist/api-fetch.min_ver%3D3623a576c78df404ff20.js" id="wp-api-fetch-js"></script>
+<script src="TMGHIXzUyMUh.com/wp-includes/js/dist/api-fetch.min_ver%3D3623a576c78df404ff20.js" id="wp-api-fetch-js"></script>
 <script id="wp-api-fetch-js-after">
 wp.apiFetch.use( wp.apiFetch.createRootURLMiddleware( "https://TMGHIXzUyMUh.com/wp-json/" ) );
 wp.apiFetch.nonceMiddleware = wp.apiFetch.createNonceMiddleware( "b7e35d3620" );
