--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ var pysOptions = {"staticEvents":{"facebook":{"init_event":[{"delay":0,"type":"s
 				<div class="elementor-element elementor-element-2642097b elementor-widget elementor-widget-heading" data-id="2642097b" data-element_type="widget" data-widget_type="heading.default">
 					<h2 class="elementor-heading-title elementor-size-default">E COM GARANTIA DE 7 DIAS!</h2>				</div>
 				<div class="elementor-element elementor-element-505cfce elementor-align-center elementor-widget elementor-widget-button" data-id="505cfce" data-element_type="widget" data-widget_type="button.default">
-										<a class="elementor-button elementor-button-link elementor-size-sm" href="https://pay.cakto.com.br/tndi3i6_427774">
+										<a class="elementor-button elementor-button-link elementor-size-sm" href="https://pay.cakto.com.br/35gu2cz_496358">
 						<span class="elementor-button-content-wrapper">
 									<span class="elementor-button-text">QUERO MEU KIT AGORA!</span>
 					</span>
@@ -373,7 +373,7 @@ var pysOptions = {"staticEvents":{"facebook":{"init_event":[{"delay":0,"type":"s
 				<div class="elementor-element elementor-element-64b2c57d elementor-widget elementor-widget-heading" data-id="64b2c57d" data-element_type="widget" data-widget_type="heading.default">
 					<h2 class="elementor-heading-title elementor-size-default">R$17</h2>				</div>
 				<div class="elementor-element elementor-element-7118c1c4 elementor-align-center elementor-widget elementor-widget-button" data-id="7118c1c4" data-element_type="widget" data-widget_type="button.default">
-										<a class="elementor-button elementor-button-link elementor-size-md" href="https://pay.cakto.com.br/tndi3i6_427774">
+										<a class="elementor-button elementor-button-link elementor-size-md" href="https://pay.cakto.com.br/35gu2cz_496358">
 						<span class="elementor-button-content-wrapper">
 									<span class="elementor-button-text">SIM! QUERO ESSA SUPER OFERTA!</span>
 					</span>
@@ -400,7 +400,7 @@ var pysOptions = {"staticEvents":{"facebook":{"init_event":[{"delay":0,"type":"s
 					<h2 class="elementor-heading-title elementor-size-default">Ainda está com dúvidas? 
 Fala comigo no WhatsApp e eu te ajudo agora mesmo!</h2>				</div>
 				<div class="elementor-element elementor-element-6d03e83 elementor-align-center elementor-widget elementor-widget-button" data-id="6d03e83" data-element_type="widget" data-widget_type="button.default">
-										<a class="elementor-button elementor-button-link elementor-size-sm" href="https://wa.me/5586999567436?text=Oi%2C+vi+o+Crescendo+em+Cristo+e+tenho+uma+d%C3%BAvida.">
+										<a class="elementor-button elementor-button-link elementor-size-sm" href="https://wa.me/5551986304062?text=Oi%2C+vi+o+Crescendo+em+Cristo+e+tenho+uma+d%C3%BAvida.">
 						<span class="elementor-button-content-wrapper">
 						<span class="elementor-button-icon">
 				<svg aria-hidden="true" class="e-font-icon-svg e-fab-whatsapp" viewBox="0 0 448 512" xmlns="http://www.w3.org/2000/svg"><path d="M380.9 97.1C339 55.1 283.2 32 223.9 32c-122.4 0-222 99.6-222 222 0 39.1 10.2 77.3 29.6 111L0 480l117.7-30.9c32.4 17.7 68.9 27 106.1 27h.1c122.3 0 224.1-99.6 224.1-222 0-59.3-25.2-115-67.1-157zm-157 341.6c-33.2 0-65.7-8.9-94-25.7l-6.7-4-69.8 18.3L72 359.2l-4.4-7c-18.5-29.4-28.2-63.3-28.2-98.2 0-101.7 82.8-184.5 184.6-184.5 49.3 0 95.6 19.2 130.4 54.1 34.8 34.9 56.2 81.2 56.1 130.5 0 101.8-84.9 184.6-186.6 184.6zm101.2-138.2c-5.5-2.8-32.8-16.2-37.9-18-5.1-1.9-8.8-2.8-12.5 2.8-3.7 5.6-14.3 18-17.6 21.8-3.2 3.7-6.5 4.2-12 1.4-32.6-16.3-54-29.1-75.5-66-5.7-9.8 5.7-9.1 16.3-30.3 1.8-3.7.9-6.9-.5-9.7-1.4-2.8-12.5-30.1-17.1-41.2-4.5-10.8-9.1-9.3-12.5-9.5-3.2-.2-6.9-.2-10.6-.2-3.7 0-9.7 1.4-14.8 6.9-5.1 5.6-19.4 19-19.4 46.3 0 27.3 19.9 53.7 22.6 57.4 2.8 3.7 39.1 59.7 94.8 83.8 35.2 15.2 49 16.5 66.6 13.9 10.7-1.6 32.8-13.4 37.4-26.4 4.6-13 4.6-24.1 3.2-26.4-1.3-2.5-5-3.9-10.5-6.6z"></path></svg>			</span>
@@ -418,7 +418,7 @@ Fala comigo no WhatsApp e eu te ajudo agora mesmo!</h2>				</div>
 				<div class="elementor-element elementor-element-38a041b elementor-widget__width-initial elementor-widget elementor-widget-text-editor" data-id="38a041b" data-element_type="widget" data-widget_type="text-editor.default">
 									<blockquote data-start="3152" data-end="3272"><p style="text-align: left;" data-start="3154" data-end="3272"><strong data-start="3154" data-end="3178">É físico ou digital?</strong><br data-start="3178" data-end="3181">É um kit digital. Após a compra, você receberá tudo por e-mail e poderá imprimir à vontade.</p></blockquote><blockquote data-start="3274" data-end="3411"><p data-start="3276" data-end="3411"><strong data-start="3276" data-end="3306">Serve para qualquer idade?</strong><br data-start="3306" data-end="3309">O conteúdo é adaptado para crianças a partir dos 3 anos, com atividades simples e também desafiadoras.</p></blockquote><blockquote data-start="3413" data-end="3502"><p data-start="3415" data-end="3502"><strong data-start="3415" data-end="3442">Como recebo o material?</strong><br data-start="3442" data-end="3445">Por e-mail imediatamente após a confirmação do pagamento.</p></blockquote>								</div>
 				<div class="elementor-element elementor-element-51538917 elementor-align-center elementor-widget elementor-widget-button" data-id="51538917" data-element_type="widget" data-widget_type="button.default">
-										<a class="elementor-button elementor-button-link elementor-size-sm" href="https://pay.cakto.com.br/tndi3i6_427774">
+										<a class="elementor-button elementor-button-link elementor-size-sm" href="https://pay.cakto.com.br/35gu2cz_496358">
 						<span class="elementor-button-content-wrapper">
 									<span class="elementor-button-text">QUERO APROVEITAR ESTA OFERTA!</span>
 					</span>
