--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@ var pysOptions = {"staticEvents":{"facebook":{"init_event":[{"delay":0,"type":"s
 				</div>
 		<div class="elementor-element elementor-element-2e1b2b4 e-con-full e-flex e-con e-child" data-id="2e1b2b4" data-element_type="container">
 				<div class="elementor-element elementor-element-ac6b4d0 elementor-align-justify elementor-widget elementor-widget-button" data-id="ac6b4d0" data-element_type="widget" data-widget_type="button.default">
-										<a class="elementor-button elementor-button-link elementor-size-sm" href="https://pay.cakto.com.br/tndi3i6_427774">
+										<a class="elementor-button elementor-button-link elementor-size-sm" href="https://pay.cakto.com.br/35gu2cz_496358">
 						<span class="elementor-button-content-wrapper">
 									<span class="elementor-button-text">QUERO MEU ACESSO IMEDIATO JÁ!</span>
 					</span>
